Group, Row, Stack, Columns. Fix missing border regression (#44696)

--- a/packages/block-editor/src/components/button-block-appender/style.scss
+++ b/packages/block-editor/src/components/button-block-appender/style.scss
@@ -48,6 +48,7 @@
 			bottom: 0;
 			left: 0;
 			pointer-events: none;
+			border: $border-width dashed currentColor;
 			@include placeholder-style();
 		}
 
